--- a/training-articles.html
+++ b/training-articles.html
@@ -90,6 +90,12 @@
 
             <div class="resume-item d-flex flex-column flex-md-row">
                 <div class="resume-content">
+                    <div class="subheading">Matt Dixon on Swimming for Triathlon? - <a href="articles/training/matt-dixon-on-swimming.html" >Read article</a></div>
+                </div>
+            </div>
+
+            <div class="resume-item d-flex flex-column flex-md-row">
+                <div class="resume-content">
                     <div class="subheading">Cant have speed without strength - <a href="articles/training/no-speed-without-strength.html" >Read article</a></div>
                 </div>
             </div>
