added ironman badge

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
           <p>I love training, racing & coaching. I want to work with people with big lofty goals but most importantly ensuring people enjoy the process along the way. We are so fortunate to be able to do what we do</p>
           <div class="subheading mb-5">089 7009527
             <a href="mailto:name@email.com">pkelly.tricoach@gmail.com</a>
+            <img src="img/certified-coach-badge.jpg" alt="" style="width: 150px">
           </div>
-
       </div>
     </section>
 
