Added uphill athlete calculator

--- a/index.html
+++ b/index.html
@@ -168,6 +168,17 @@
             <span class="text-primary"><a href="race-reports.html">Go to race reports</a></span>
           </div>
         </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Calculators</h3>
+            <p>Training Zone Calculators.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary"><a href="uphill-calculator.html">Go to uphill athlete calculator</a></span>
+          </div>
+        </div>
+
       </div>
 
     </section>
