added new calculators

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <p>Training Zone Calculators.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary"><a href="uphill-calculator.html">Go to uphill athlete calculator</a></span>
+            <span class="text-primary"><a href="calculators.html">Go to training calculators</a></span>
           </div>
         </div>
 
